--- a/_posts/2022-02-15-test.md
+++ b/_posts/2022-02-15-test.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: test
-published: false
+published: true
 date: 2022-02-15
 categories: [hardware]
 tags: [theory, circuit, embedded]
