colored bash command added

--- a/_posts/2022-02-15-test-bash.md
+++ b/_posts/2022-02-15-test-bash.md
@@ -31,11 +31,15 @@ The Tablet device used here is the Nexus 7 (2012)
 
 `ayx@ayx-HP:~$ sudo apt-get install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev ccache libgl1-mesa-dev libxml2-utils xsltproc unzip`
 
-`ayx@ayx-HP:~/$ sudo apt-get install ncurses-dev`
+{% highlight bash %}
+ayx@ayx-HP:~/$ sudo apt-get install ncurses-dev
+{% highlight bash %}
 
 * install adb tool
 
-`ayx@ayx-HP:~/$ sudo apt-get install android-tools-adb`
+<span style="color:blue">
+ayx@ayx-HP:~/$ sudo apt-get install android-tools-adb
+</span>
 
 * Fix Udev permission error
 
