new post added to test google doc conversion

--- a/_posts/2022-02-15-test-bash.md
+++ b/_posts/2022-02-15-test-bash.md
@@ -16,7 +16,7 @@ tags: [android]
 
 Here In this blog I will be sharing how I downloaded Android AOSP sources and built AOSP image for Nexus 7 [2012] device. You can follow this approach to build AOSP images for your devices for example Nexus 5 . So Let’s Start
 
-**Device Information **
+** Device Information **
 
 The Tablet device used here is the Nexus 7 (2012)
 
@@ -25,33 +25,40 @@ The Tablet device used here is the Nexus 7 (2012)
 * HW version : ER3
 * Bootloader Version : 4.23
 
-**Environment Setup **
+** Environment Setup **
 
 * install some required packages
 
-`ayx@ayx-HP:~$ sudo apt-get install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev ccache libgl1-mesa-dev libxml2-utils xsltproc unzip`
+</span><span style="color:blue">
+ayx@ayx-HP:~$ sudo apt-get install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev ccache libgl1-mesa-dev libxml2-utils xsltproc unzip
+</span>
 
-{% highlight bash %}
+</span><span style="color:blue">
 ayx@ayx-HP:~/$ sudo apt-get install ncurses-dev
-{% highlight bash %}
+</span>
 
 * install adb tool
 
-<span style="color:blue">
+</span><span style="color:blue">
 ayx@ayx-HP:~/$ sudo apt-get install android-tools-adb
 </span>
 
 * Fix Udev permission error
 
-`ayx@ayx-HP:~$ lsusb`
+</span><span style="color:blue">
+ayx@ayx-HP:~$ lsusb
+</span>
 
-* check the vendor id left of the colon , e.g nexus 5 & Open this file 
+* check the vendor id left of the colon , e.g nexus 5 & Open this file
 
-`ayx@ayx-HP:~$ sudo gedit /etc/udev/rules.d/51-android.rules`
+</span><span style="color:blue">
+ayx@ayx-HP:~$ sudo gedit /etc/udev/rules.d/51-android.rules
+</span>
 
 * Put the following at the bottom of the file and save
 
-`# Nexus 5 Google Inc 
+</span><span style="color:blue">
+`# Nexus 5 Google Inc
 SUBSYSTEM=="usb", ATTR{idVendor}=="18d1", MODE="0666", GROUP="plugdev"`
 
 `ayx@ayx-HP:~$ sudo chmod a+r /etc/udev/rules.d/51-android.rules
@@ -61,19 +68,24 @@ ayx@ayx-HP:~$ sudo service udev restart
 ayx@ayx-HP:~$ sudo udevadm control --reload-rules
 ayx@ayx-HP:~$ sudo udevadm trigger
 ayx@ayx-HP:~$ fastboot -l devices`
+</span>
+
 
 * install Java 7
 
-`ayx@ayx-HP:~$sudo apt-get install -f
+```bash
+ayx@ayx-HP:~$sudo apt-get install -f
 ayx@ayx-HP:~$sudo add-apt-repository ppa:openjdk-r/ppa
 ayx@ayx-HP:~$sudo apt-get update
-ayx@ayx-HP:~$sudo apt-get install openjdk-7-jre`
+ayx@ayx-HP:~$sudo apt-get install openjdk-7-jre
+```
 
 * select java 7 for the followings
 
+</span><span style="color:blue">
 `ayx@ayx-HP:~$ sudo update-alternatives --config javac
 ayx@ayx-HP:~/$ sudo update-alternatives --config java
 ayx@ayx-HP:~/$ sudo update-alternatives --config javap`
+</span>
 
-* check versions of following & In my cases these were the versions 
-
+* check versions of following & In my cases these were the versions
