avatar linked, one good post, twitter and github links added

--- a/_posts/2019-10-29-esp32-hw-intro.md
+++ b/_posts/2019-10-29-esp32-hw-intro.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: introduction to ESP32 hardware
+title: Introduction to ESP32 hardware
 published: true
 date: 2019-10-29
 categories: [firmware]
