--- a/_posts/2019-10-29-esp32-hw-intro.md
+++ b/_posts/2019-10-29-esp32-hw-intro.md
@@ -8,7 +8,7 @@ tags: [esp32]
 ---
 
 
-
+In this post we will know about some of the basic hardware informations related to ESP32 
   
 **Board info**
 
