asop android post is ready

--- a/_posts/2022-02-15-test-bash.md
+++ b/_posts/2022-02-15-test-bash.md
@@ -1,20 +1,18 @@
 ---
 layout: post
 title: test
-published: false
-date: 2022-02-15
+published: true
+date: 2019-09-10
 categories: [software]
 tags: [android]
 ---
-# Building AOSP image
-
+# Building an AOSP image
 
 ## Nexus 7 [2012]
 
-
 ## Android-Lollipop
 
-Here In this blog I will be sharing how I downloaded Android AOSP sources and built AOSP image for Nexus 7 [2012] device. You can follow this approach to build AOSP images for your devices for example Nexus 5 . So Let’s Start
+Here In this Post I will be sharing how I downloaded Android AOSP sources and built AOSP image for Nexus 7 [2012] device. You can follow this approach to build AOSP images for your devices for example Nexus 5 . So Let’s Start
 
 ** Device Information **
 
@@ -29,31 +27,31 @@ The Tablet device used here is the Nexus 7 (2012)
 
 * install some required packages
 
-</span><span style="color:blue">
+```bash
 ayx@ayx-HP:~$ sudo apt-get install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev ccache libgl1-mesa-dev libxml2-utils xsltproc unzip
-</span>
+```
 
-</span><span style="color:blue">
+```bash
 ayx@ayx-HP:~/$ sudo apt-get install ncurses-dev
-</span>
+```
 
 * install adb tool
 
-</span><span style="color:blue">
+```bash
 ayx@ayx-HP:~/$ sudo apt-get install android-tools-adb
-</span>
+```
 
 * Fix Udev permission error
 
-</span><span style="color:blue">
+```bash
 ayx@ayx-HP:~$ lsusb
-</span>
+```
 
 * check the vendor id left of the colon , e.g nexus 5 & Open this file
 
-</span><span style="color:blue">
+```bash
 ayx@ayx-HP:~$ sudo gedit /etc/udev/rules.d/51-android.rules
-</span>
+```
 
 * Put the following at the bottom of the file and save
 
@@ -61,15 +59,15 @@ ayx@ayx-HP:~$ sudo gedit /etc/udev/rules.d/51-android.rules
 `# Nexus 5 Google Inc
 SUBSYSTEM=="usb", ATTR{idVendor}=="18d1", MODE="0666", GROUP="plugdev"`
 
-`ayx@ayx-HP:~$ sudo chmod a+r /etc/udev/rules.d/51-android.rules
+```bash
+ayx@ayx-HP:~$ sudo chmod a+r /etc/udev/rules.d/51-android.rules
 ayx@ayx-HP:~$ sudo service udev restart
 ayx@ayx-HP:~$ fastboot -l devices
 ayx@ayx-HP:~$ sudo service udev restart
 ayx@ayx-HP:~$ sudo udevadm control --reload-rules
 ayx@ayx-HP:~$ sudo udevadm trigger
 ayx@ayx-HP:~$ fastboot -l devices`
-</span>
-
+```
 
 * install Java 7
 
@@ -82,10 +80,10 @@ ayx@ayx-HP:~$sudo apt-get install openjdk-7-jre
 
 * select java 7 for the followings
 
-</span><span style="color:blue">
-`ayx@ayx-HP:~$ sudo update-alternatives --config javac
+```bash
+ayx@ayx-HP:~$ sudo update-alternatives --config javac
 ayx@ayx-HP:~/$ sudo update-alternatives --config java
 ayx@ayx-HP:~/$ sudo update-alternatives --config javap`
-</span>
+```
 
 * check versions of following & In my cases these were the versions
