--- a/_posts/2022-02-15-test-bash.md
+++ b/_posts/2022-02-15-test-bash.md
@@ -1,29 +1,24 @@
 ---
 layout: post
-title: test
+title: Building an AOSP image
 published: true
 date: 2019-09-10
 categories: [software]
 tags: [android]
 ---
-# Building an AOSP image
-
-## Nexus 7 [2012]
-
-## Android-Lollipop
 
 Here In this Post I will be sharing how I downloaded Android AOSP sources and built AOSP image for Nexus 7 [2012] device. You can follow this approach to build AOSP images for your devices for example Nexus 5 . So Let’s Start
 
-** Device Information **
+# Device Information
 
-The Tablet device used here is the Nexus 7 (2012)
-
+* The Tablet device used here is the Nexus 7 (2012)
+* OS : Android-Lollipop
 * Product Name : grouper
 * Variant : grouper
 * HW version : ER3
 * Bootloader Version : 4.23
 
-** Environment Setup **
+# Environment Setup
 
 * install some required packages
 
@@ -55,9 +50,10 @@ ayx@ayx-HP:~$ sudo gedit /etc/udev/rules.d/51-android.rules
 
 * Put the following at the bottom of the file and save
 
-</span><span style="color:blue">
-`# Nexus 5 Google Inc
+```bash
+# Nexus 5 Google Inc
 SUBSYSTEM=="usb", ATTR{idVendor}=="18d1", MODE="0666", GROUP="plugdev"`
+```
 
 ```bash
 ayx@ayx-HP:~$ sudo chmod a+r /etc/udev/rules.d/51-android.rules
