--- a/_posts/2019-10-29-esp32-hw-intro.md
+++ b/_posts/2019-10-29-esp32-hw-intro.md
@@ -3,8 +3,8 @@ layout: post
 title: Introduction to ESP32 hardware
 published: true
 date: 2019-10-29
-categories: [firmware]
-tags: [esp32]
+categories: [esp32]
+tags: [firmware]
 comments: true
 ---
 
