--- a/_posts/2022-02-15-test-bash.md
+++ b/_posts/2022-02-15-test-bash.md
@@ -3,8 +3,8 @@ layout: post
 title: Building an AOSP image
 published: true
 date: 2019-09-10
-categories: [software]
-tags: [android]
+categories: [android]
+tags: [software]
 ---
 
 Here In this Post I will be sharing how I downloaded Android AOSP sources and built AOSP image for Nexus 7 [2012] device. You can follow this approach to build AOSP images for your devices for example Nexus 5 . So Let’s Start
