img related works done

--- a/_posts/2022-02-15-test-bash.md
+++ b/_posts/2022-02-15-test-bash.md
@@ -11,6 +11,9 @@ Here In this Post I will be sharing how I downloaded Android AOSP sources and bu
 
 # Device Information
 
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSn6q33QaKzbik3Y3ySfOiPvRysxOU5wffs0A&usqp=CAU">
+
+
 * The Tablet device used here is the Nexus 7 (2012)
 * OS : Android-Lollipop
 * Product Name : grouper
