--- a/_posts/2019-10-29-esp32-hw-intro.md
+++ b/_posts/2019-10-29-esp32-hw-intro.md
@@ -15,15 +15,15 @@ In this post we will know about some of the basic hardware informations related 
 
 The board that I am using is called the ESP32-DevKitC V4 board
 
-![](https://lh6.googleusercontent.com/SNdTUl96dqyfX2LS-RbLdAAopJajpDSDUa24HqVxpoSdi7uUIqViEwaGmQksyx4NNv9JnHtwtq_E6ud6quyLHKmdWJ_9x6hNQDkL4yv9AdjScX5nu98WNHVzc7UzPBodlBHKHgB7)
+<img src="https://lh6.googleusercontent.com/SNdTUl96dqyfX2LS-RbLdAAopJajpDSDUa24HqVxpoSdi7uUIqViEwaGmQksyx4NNv9JnHtwtq_E6ud6quyLHKmdWJ_9x6hNQDkL4yv9AdjScX5nu98WNHVzc7UzPBodlBHKHgB7" width="360" height="420">
 
 _ESP32-DevKitC V4 board_
 
-![](https://lh4.googleusercontent.com/QoRhx0uUQHc3cgSG4eKOEGGC0-V85tLrGWpt8vtIY5UeV_FCyWT9gixp9NM5BpuVADtxpfua7eib-_ehtTA9ASZARVtIgxO24Fo-hDCenA-3x7py8mwMcpBo7w79tYUbwPf-DWe2)
+<img src="https://lh4.googleusercontent.com/QoRhx0uUQHc3cgSG4eKOEGGC0-V85tLrGWpt8vtIY5UeV_FCyWT9gixp9NM5BpuVADtxpfua7eib-_ehtTA9ASZARVtIgxO24Fo-hDCenA-3x7py8mwMcpBo7w79tYUbwPf-DWe2" width="720" height="480">
 
 _ESP32-WROOM-32 module_
 
-![](https://lh5.googleusercontent.com/8WvqZWXf1DCf_henYiSVPQcKFoNZGgRgWoXHlV7om-PqxNZn6UEswDnqjqbS2Oj8hrDGrLOevnFmbd2BZ3Jl-c6j1rxeQnOQDkAjoY5Ji5rZGafSN_48wWgyqZfOVfm1LohdwtNi)
+<img src="https://lh5.googleusercontent.com/8WvqZWXf1DCf_henYiSVPQcKFoNZGgRgWoXHlV7om-PqxNZn6UEswDnqjqbS2Oj8hrDGrLOevnFmbd2BZ3Jl-c6j1rxeQnOQDkAjoY5Ji5rZGafSN_48wWgyqZfOVfm1LohdwtNi" width="720" height="480">
 
 _ESP32-D0WDQ6 chip_
 
