--- a/_posts/2019-10-29-esp32-hw-intro.md
+++ b/_posts/2019-10-29-esp32-hw-intro.md
@@ -7,6 +7,10 @@ categories: [esp32]
 tags: [firmware]
 comments: true
 featured_img: "https://lh6.googleusercontent.com/SNdTUl96dqyfX2LS-RbLdAAopJajpDSDUa24HqVxpoSdi7uUIqViEwaGmQksyx4NNv9JnHtwtq_E6ud6quyLHKmdWJ_9x6hNQDkL4yv9AdjScX5nu98WNHVzc7UzPBodlBHKHgB7"
+sitemap:
+  lastmod: 2022-04-18
+  priority: 0.5
+  changefreq: 'monthly'
 ---
 
 In this post we will know about some of the basic hardware informations related to ESP32 
