--- a/_posts/2019-10-29-esp32-hw-intro.md
+++ b/_posts/2019-10-29-esp32-hw-intro.md
@@ -74,7 +74,7 @@ ESP32 has 5 strapping PINs
 
 **Important Notes about Strapping Pins**
 
-- When the chip resets the **latches** of these pins, sample the voltage levels of the pins as strapping bits of “0” or “1” . These read values i.e strapping bits configure the device’s boot mode, the operating voltage & other initial system settings
+- After getting reset esp32 itself internally samples the voltage levels of these pins as strapping bits of “0” or “1”. Afterwards These read values known as strapping bits decides the device’s boot mode, the operating voltage & other initial system settings
 - The chip holds these strapping bits in the GPIO_STRAPPING register until the chip is powered down.
 - You can connect external circuit to these strapping pins and set different settings which the chip will follow at boot
 - Each strapping pin also has **default** internal pull-up/ pull-down circuitry So if there is no external circuitry to set strapping value then the internal pull-up/pull-down circuitry will determine the strapping value , which the chip will follow at boot
